Se agrego la pantalla de categorizador(solo visual)

--- a/DSS_Scoring.Client/Layout/MainLayout.razor
+++ b/DSS_Scoring.Client/Layout/MainLayout.razor
@@ -10,6 +10,7 @@
         <nav class="navigation">
             <NavLink href="/">Home</NavLink>
             <NavLink href="/Prueba">Prueba</NavLink>
+            <NavLink href="/Categorizador">Categorizador</NavLink>
         </nav>
     </header>
 
